Add database and reference to database in index.html file. Set up admin page to access database server.

--- a/templates/index.html
+++ b/templates/index.html
@@ -103,10 +103,8 @@
             <div class="icon"><i class="ri-stack-line"></i></div>
             <h4 class="title"><a href="">{{feature.name}}</a></h4>
             <p class="description">{{feature.details}}</p>
-            {% if feature.is_true == True %}
-            <p>This feature is true</p>
-            {% elif feature.is_true == False %}
-            <p>This feature is false</p>
+            {% if feature.name == 'Quick' %}
+            <p>This feature says our site is quick</p>
             {% endif %}
           </div>
         </div>
