--- a/templates/index.html
+++ b/templates/index.html
@@ -96,7 +96,7 @@
       </div>
 
       <div class="row icon-boxes">
-        
+ <!-- ============================================================================== THIS IS THE SECTION THAT REFERENCES THE MODEL DATABASE ============================== -->       
         {% for feature in features %}
         <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="200">
           <div class="icon-box">
